finally fixed incredibly annoying Safari white space on top of page on mobile

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -23,15 +23,21 @@ a:hover {
   color: #FFD52E;
 }
 
+.content {
+  min-height: 100vh;
+}
+
 html {
   background-color: #242424;
-  height: auto;
+  height: 100vh;
+  overflow: hidden;
+  margin: 0;
   -webkit-overflow-scrolling: touch;
   overscroll-behavior-y: contain;
 }
 
 body {
-  height: 100%;
+  height: 100vh;
   overflow: auto;
   margin: 0;
   display: flex;
